fix header spacing and grid style

--- a/assets/themes/FX-Exchange/stylus/blinktrade/_grid.styl
+++ b/assets/themes/FX-Exchange/stylus/blinktrade/_grid.styl
@@ -6,17 +6,21 @@
                     color white
 
             tr:nth-child(2)
+                border-left 1px solid #ddd
+                border-right 1px solid #ddd
                 th
                     color #333
 
 
     td
         vertical-align middle
-        font-weight 300
+        font-weight 400
 
     th
         vertical-align middle
         font-weight 400!important
+        text-transform uppercase
+        line-height 40px
 
         h5
             font-weight 400
