--- a/assets/themes/FX-Exchange/stylus/blinktrade/_header.styl
+++ b/assets/themes/FX-Exchange/stylus/blinktrade/_header.styl
@@ -5,6 +5,10 @@
     justify-content center
     height 100px
 
+    .brand
+        img
+            max-width 325px
+
     ul
         li
             a
